# gpui

./: .gitattributes  .gitignore  Cargo.toml  build.rs
.spool/events/: 2026-02-08.jsonl  2026-02-09.jsonl
crates/gpui/: Cargo.toml  build.rs
crates/gpui/src/: action.rs  app.rs  default_colors.rs  geometry_ext.rs  taffy.rs  text_system.rs  view.rs
crates/gpui/src/app/: test_context.rs
crates/gpui/src/elements/: svg.rs
crates/gpui/src/platform/: keystroke.rs  windows.rs
crates/gpui/src/platform/blade/: blade_renderer.rs
crates/gpui/src/platform/linux/: platform.rs
crates/gpui/src/platform/mac/: metal_atlas.rs  platform.rs
crates/gpui/src/platform/windows/: platform.rs
crates/gpui/src/text_system/: line.rs  parley_text_system.rs
crates/gpui_core/: Cargo.toml
crates/gpui_core/src/: atlas.rs  bounds_tree.rs  color.rs  content_mask.rs  geometry.rs  lib.rs  scene.rs
crates/gpui_http_client/: Cargo.toml
crates/gpui_http_client/src/: http_client.rs
crates/gpui_util/: Cargo.toml
crates/gpui_util/src/: paths.rs  shell.rs  util.rs
examples/bench/: data_table.rs  paths_bench.rs  pattern.rs  shadow.rs
examples/feature/: text.rs
examples/learn/: animation.rs  async_tasks.rs  creating_components.rs  custom_drawing.rs  interactive_elements.rs  layout.rs  styling.rs  text.rs  text_system_test.rs
examples/legacy/: focus_visible.rs  gradient.rs  hello_world.rs  image_loading.rs  input.rs  on_window_close_quit.rs  opacity.rs  scrollable.rs  tab_stop.rs  tree.rs  uniform_list.rs  window.rs  window_shadow.rs
examples/legacy/image/: image.rs
examples/legacy/svg/: svg.rs
script/: clippy
src/: element.rs  geometry.rs  gpui.rs  interactive.rs  key_dispatch.rs  keymap.rs  path_builder.rs  platform.rs  scene.rs  text_system.rs  window.rs
src/app/: test_context.rs
src/elements/: anchored.rs  div.rs  list.rs  svg.rs  text.rs
src/platform/: linux.rs  mac.rs  web.rs
src/platform/blade/: blade_atlas.rs
src/platform/linux/: platform.rs
src/platform/linux/wayland/: window.rs
src/platform/linux/x11/: window.rs
src/platform/mac/: attributed_string.rs  events.rs  metal_renderer.rs  platform.rs  window.rs
src/platform/test/: window.rs
src/platform/web/: dispatcher.rs  display.rs  platform.rs  renderer.rs  window.rs
src/platform/web/shaders/: path_composite.wgsl  path_rasterization.wgsl  quad.wgsl  shadow.wgsl  underline.wgsl
src/platform/windows/: directx_atlas.rs  platform.rs  window.rs
src/text_system/: line_layout.rs  line_wrapper.rs  parley_text_system.rs
