[package]
name = "gpui_core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Platform-independent core types and traits for GPUI"
publish = false

[dependencies]
anyhow = "1.0.86"
derive_more = "0.99.17"
schemars = { version = "1.0", features = ["indexmap2"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
util = { package = "gpui_util", version = "0.2.2" }

[dev-dependencies]
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
