[package]
edition = "2024"
name = "gpui_http_client"
version = "0.2.2"
build = false
publish = false
description = "A HTTP client library for GPUI"
license = "Apache-2.0"

[features]
test-support = []

[lib]
name = "gpui_http_client"
path = "src/http_client.rs"
doctest = true

[dependencies]
anyhow = "1.0.86"
bytes = "1.0"
derive_more = "0.99.17"
futures = "0.3"
http = "1.1"
http-body = "1.0"
parking_lot = "0.12.1"
reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
] }
url = "2.2"

[lints.clippy]
dbg_macro = "deny"
declare_interior_mutable_const = "deny"
disallowed_methods = "deny"
large_enum_variant = "allow"
let_underscore_future = "allow"
nonminimal_bool = "allow"
redundant_clone = "deny"
single_range_in_vec_init = "allow"
todo = "deny"
too_many_arguments = "allow"
type_complexity = "allow"

[lints.clippy.style]
level = "allow"
priority = -1

[lints.rust.unexpected_cfgs]
level = "allow"
priority = 0
