[package]
edition = "2024"
name = "gpui_util"
version = "0.2.2"
build = false
publish = false
description = "Utility structs and functions used by GPUI"
license = "Apache-2.0"

[features]
test-support = []

[lib]
name = "gpui_util"
path = "src/util.rs"
doctest = true

[dependencies]
anyhow = "1.0.86"
futures = "0.3"
log = "0.4.16"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
smol = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
dunce = "1.0"
